# scFM-eval

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODOS.md  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
configs/: config.yaml
configs/task/: batch_integration.yaml  drug_response_prediction.yaml  drug_response_prediction_new.yaml  drug_response_prediction_old.yaml  gene_perturbation.yaml  proteome_prediction.yaml
data_prep/batch_integration/: data.py
data_prep/drug_response_prediction/: create_gdsc_data.ipynb
data_prep/proteome_prediction/old/: prot_data.ipynb
notebooks/: batch_integration.ipynb  dataloader.py  diversity_by_design.ipynb  drug_response_prediction_new.py  h5ad_to_csv.ipynb  norman_data.py  test.py  test_drp.ipynb  test_drp.py
src/: main.py
src/loaders/: __init__.py  drpnew.py  drug_response_prediction.py  drug_response_prediction_new.py  proteome_prediction.py
src/metrics/: __init__.py  gene_perturbation.py
src/tasks/: __init__.py
src/tasks/batch_integration/: __init__.py  runner.py
src/tasks/drug_response_prediction/: __init__.py  model.py  runner.py  utils.py
src/tasks/drug_response_prediction_new/: __init__.py  model.py  runner.py
src/tasks/drug_response_prediction_old/: __init__.py  runner.py
src/tasks/gene_perturbation/: __init__.py  runner.py
src/tasks/proteome_prediction/: __init__.py  model.py  runner.py
