[project]
name = "scfm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anndata>=0.12.6",
    "hydra-core>=1.3.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scib-metrics>=0.5.7",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and bugbear (B)
select = ["F", "E", "W", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "src"
